--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,8 @@ html {
 
 body {
   margin: 0;
-  font-family: "Work Sans", sans-serif;
+  /*font-family: "Work Sans", sans-serif;*/
+  font-family: 'Merienda', cursive;
 }
 
 .container {
@@ -22,6 +23,11 @@ body {
   z-index: 1;
 }
 
+.container div.nine{
+  text-align: center;
+  margin: 0px 0px;
+  float: top;
+}
 .container div.seven,
 .container div.eight {
   width: 100vw;
@@ -54,7 +60,7 @@ body {
 }
 
 .three {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .four .text-box {
@@ -211,7 +217,7 @@ body {
 }
 
 .wish-hbd {
-  font-size: 3em;
+  font-size: 3.1em;
   margin: 0;
   text-transform: uppercase;
 }
@@ -223,7 +229,8 @@ body {
 }
 
 .nine p {
-  font-size: 2rem;
+  margin:;
+  font-size: 1rem;
   font-weight: lighter;
 }
 
@@ -285,7 +292,7 @@ body {
   }
 
   .wish-hbd {
-    font-size: 2.2em;
+    font-size: 2.4em;
   }
 
   .wish h5 {
@@ -293,7 +300,13 @@ body {
   }
 
   .nine p {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    font-weight: lighter;
+  }
+
+  .link {
+    font-size: 2rem;
     font-weight: lighter;
   }
 }
+
